--- a/surf/footer.html
+++ b/surf/footer.html
@@ -14,7 +14,7 @@
     
     <div class="innerfooter">
         <div class="moto">
-            <a href="index.html" class="logo"><img src="./assets/images/surf.svg" alt=""></a>
+            <a href="index.php" class="logo"><img src="./assets/images/surf.svg" alt=""></a>
             <p>Destinations made simple.</p>
             <ul class="social">
                 <li><a href="#"></a></li>
@@ -25,18 +25,18 @@
         <div class="footerlinks">
             <ul>
                 <h6>SITE</h6>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
-                <li><a href="featured.html">Featured</a></li>
+                <li><a href="about.php">About Us</a></li>
+                <li><a href="contact.php">Contact</a></li>
+                <li><a href="reviews.php">Reviews</a></li>
+                <li><a href="featured.php">Featured</a></li>
             </ul>
             
             <ul>
                 <h6>INFO</h6>
-                <li><a href="privacy.html">Privacy</a></li>
-                <li><a href="terms.html">Terms</a></li>
-                <li><a href="bugreport.html">Bug Reports</a></li>
-                <li><a href="join.html">Join Us</a></li>
+                <li><a href="privacy.php">Privacy</a></li>
+                <li><a href="terms.php">Terms</a></li>
+                <li><a href="bugreport.php">Bug Reports</a></li>
+                <li><a href="join.php">Join Us</a></li>
             </ul>
         </div>
 
