added scroll features

--- a/surf/footer.html
+++ b/surf/footer.html
@@ -50,3 +50,4 @@
 
 <!-- **************** MENU SCRIPT ***************** -->
 <script src="./js/menu.js"></script>
+<script src="./js/scroll.js"></script>
