--- a/surf/footer.html
+++ b/surf/footer.html
@@ -28,7 +28,7 @@
                 <li><a href="about.php">About Us</a></li>
                 <li><a href="contact.php">Contact</a></li>
                 <li><a href="reviews.php">Reviews</a></li>
-                <li><a href="featured.php">Featured</a></li>
+                <!-- <li><a href="featured.php">Featured</a></li> -->
             </ul>
             
             <ul>
@@ -36,7 +36,7 @@
                 <li><a href="privacy.php">Privacy</a></li>
                 <li><a href="terms.php">Terms</a></li>
                 <li><a href="bugreport.php">Bug Reports</a></li>
-                <li><a href="join.php">Join Us</a></li>
+                <!-- <li><a href="join.php">Join Us</a></li> -->
             </ul>
         </div>
 
